[package]
name = "naive_colm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aes = "0.8.1"

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
rpath = false
incremental = false

[[bench]]
name = "colm-0"
path = "benches/colm_0.rs"
harness = false
